[package]
name = "dotfiles"
version = "0.1.0"
edition = "2021"
description = "Manage dotfiles by syncing a repo src/ to home"

[[bin]]
name = "dotfiles"
path = "bin/main.rs"

[dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
dirs = "5"
globset = "0.4"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
